--- a/style.css
+++ b/style.css
@@ -1,113 +1,11 @@
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
-}
-
-hr{
-    width: 500px;
+*, *::before, *::after {
+  box-sizing: border-box; 
+  font-family: Arial;
 }
 
 #board {
-    width: 400px;
-    height: 400px;
-
-    background-color: #cdc1b5;
-    border: 6px solid #bbada0;
-
-    margin: 0 auto; /* center the board */
-    display: flex;
-    flex-wrap: wrap;
-
+    display: grid;
+    grid-template-columns: repeat(4,20vmin);
+    grid-template-rows: repeat(4,20vmin);
+    
 }
-
-.tile {
-    width: 90px;
-    height: 90px;
-    border: 5px solid #bbada0;
-
-    font-size: 40px;
-    font-weight: bold;
-    display: flex;
-    justify-content: center; /* center the text horizontally */
-    align-items: center; /* center the text horizontally */
-}
-
-
-/* Specific tile colors */
-.x2{
-    background-color: #eee4da;
-    color: #776e65; /* font-color */
-}
-
-.x4{
-    background-color: #ede0c8;
-    color: #776e65; /* font-color */
-
-}
-
-.x8{
-    background-color: #f2b179;
-    color: #f9f6f2; /* font-color */
-
-}
-
-.x16{
-    background-color: #f59563;
-    color: #f9f6f2; /* font-color */
-
-}
-
-.x32{
-    background-color: #f67c5f;
-    color: #f9f6f2; /* font-color */
-
-}
-
-.x64{
-    background-color: #f65e3b;
-    color: #f9f6f2; /* font-color */
-
-}
-
-.x128{
-    background-color: #edcf72;
-    color: #f9f6f2; /* font-color */
-
-}
-
-.x256{
-    background-color: #edcc61;
-    color: #f9f6f2; /* font-color */
-
-}
-
-.x512{
-    background-color: #edc850;
-    color: #f9f6f2; /* font-color */
-
-}
-
-.x1024{
-    background-color: #edc53f;
-    color: #f9f6f2; /* font-color */
-
-}
-
-.x2048{
-    background-color: #edc22e;
-    color: #f9f6f2; /* font-color */
-
-}
-
-.x4096{
-    background-color: #3c3a32;
-    color: #f9f6f2; /* font-color */
-
-}
-
-.x8192{
-    background-color: #d51e1e;
-    color: #f9f6f2; /* font-color */
-
-}
-
